--- a/index.html
+++ b/index.html
@@ -162,6 +162,125 @@
   input[type="text"]{background:transparent;border:none;outline:none;color:inherit;font-size:14px}
   .add-bar{display:flex;gap:8px;align-items:center}
   .show-when-empty{color:var(--muted);font-size:13px;padding:12px;text-align:center}
+
+  /* Tablet adjustments */
+@media (max-width: 980px) {
+  .wrap {
+    grid-template-columns: 1fr;
+  }
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 6px;
+  }
+  .brand {
+    gap: 8px;
+  }
+  h1 {
+    font-size: 18px;
+  }
+  .logo {
+    width: 48px;
+    height: 48px;
+    font-size: 16px;
+  }
+}
+
+/* Mobile layout optimization */
+@media (max-width: 640px) {
+  body {
+    padding: 16px;
+    font-size: 14px;
+  }
+
+  .wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+  }
+
+  .card {
+    padding: 12px;
+    border-radius: 10px;
+  }
+
+  .exam {
+    grid-template-columns: 1fr;
+    gap: 8px;
+    align-items: flex-start;
+    text-align: left;
+  }
+
+  .exam .date {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .exam .count {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+  }
+
+  .count .big {
+    font-size: 16px;
+  }
+
+  .controls {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .btn {
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+  }
+
+  .summary-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .mini-card h3 {
+    font-size: 18px;
+  }
+
+  .mini-card p {
+    font-size: 12px;
+  }
+
+  footer {
+    font-size: 11px;
+    line-height: 1.4;
+  }
+
+  .rules {
+    font-size: 12px;
+  }
+
+  .search input[type="text"] {
+    font-size: 13px;
+    width: 100%;
+  }
+
+  .removed-list {
+    flex-direction: column;
+  }
+
+  .pill {
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+
 </style>
 </head>
 <body>
